infrastructure/terraform/modules/f2-instance/main.tf
locals {
  protocol_ports = {
    "http"         = 80
    "https"        = 443
    "dns-over-tls" = 853
  }

  port_flags = join(" ", [
    for p in var.inbound_protocols :
    "-p ${local.protocol_ports[p]}:${local.protocol_ports[p]}"
    if contains(keys(local.protocol_ports), p)
  ])
}

# IAM policies and roles
data "aws_iam_policy_document" "ec2_assume_role" {
  statement {
    actions = ["sts:AssumeRole"]

    principals {
      type        = "Service"
      identifiers = ["ec2.amazonaws.com"]
    }
  }
}

resource "aws_iam_role" "this" {
  name               = format("%s-role", var.name)
  description        = format("Role for the %s instance", var.name)
  assume_role_policy = data.aws_iam_policy_document.ec2_assume_role.json
}

resource "aws_iam_policy" "this" {
  name        = format("%s-policy", var.name)
  description = format("Policy for %s-role", var.name)

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action   = ["s3:ListBucket"]
        Effect   = "Allow"
        Resource = format("arn:aws:s3:::%s", var.configuration.bucket)
      },
      {
        Action   = ["s3:GetObject"]
        Effect   = "Allow"
        Resource = format("arn:aws:s3:::%s/*", var.configuration.bucket)
      },
      {
        Action   = ["s3:ListBucket"]
        Effect   = "Allow"
        Resource = format("arn:aws:s3:::%s", var.logging.bucket)
      },
      {
        Action   = ["s3:PutObject"]
        Effect   = "Allow"
        Resource = format("arn:aws:s3:::%s/*", var.logging.bucket)
      },
      {
        Action   = ["s3:GetObject", "s3:PutObject"]
        Effect   = "Allow"
        Resource = format("arn:aws:s3:::%s/*", var.hackathon.bucket)
      },
      {
        Action   = ["textract:AnalyzeExpense"]
        Effect   = "Allow"
        Resource = "*"
      }
    ]
  })
}

resource "aws_iam_role_policy_attachment" "this" {
  role       = aws_iam_role.this.name
  policy_arn = aws_iam_policy.this.arn
}

resource "aws_iam_instance_profile" "this" {
  name = format("%s-instance-profile", var.name)
  role = aws_iam_role.this.name
}

# Security groups
resource "aws_security_group" "this" {
  name        = format("%s-f2-instance", var.name)
  description = format("Security group for the %s f2-instance", var.name)
  vpc_id      = var.instance.vpc_id
}

resource "aws_security_group_rule" "allow_inbound_ssh" {
  count = contains(var.inbound_protocols, "ssh") ? 1 : 0

  description       = "Allow inbound SSH from anywhere"
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = aws_security_group.this.id
  cidr_blocks       = ["0.0.0.0/0"]
}

data "aws_subnet" "inbound_http" {
  count = var.inbound_http_subnet_id != null ? 1 : 0
  id    = var.inbound_http_subnet_id
}

resource "aws_security_group_rule" "allow_inbound_http" {
  count = var.inbound_http_subnet_id != null ? 1 : 0

  description       = "Allow inbound http from the specified subnet"
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  security_group_id = aws_security_group.this.id
  cidr_blocks       = var.inbound_http_subnet_id != null ? [data.aws_subnet.inbound_http[0].cidr_block] : []
}

resource "aws_security_group_rule" "allow_inbound_https" {
  count = contains(var.inbound_protocols, "https") ? 1 : 0

  description       = "Allow inbound HTTPS from anywhere"
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  security_group_id = aws_security_group.this.id
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "allow_inbound_dns_over_tls" {
  count = contains(var.inbound_protocols, "dns-over-tls") ? 1 : 0

  description       = "Allow inbound DNS over TLS from anywhere"
  type              = "ingress"
  from_port         = 853
  to_port           = 853
  protocol          = "tcp"
  security_group_id = aws_security_group.this.id
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "allow_outbound_ssh" {
  description       = "Allow outbound SSH to anywhere"
  type              = "egress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = aws_security_group.this.id
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "allow_outbound_http" {
  description       = "Allow outbound HTTP to anywhere"
  type              = "egress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  security_group_id = aws_security_group.this.id
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "allow_outbound_https" {
  description       = "Allow outbound HTTPS to anywhere"
  type              = "egress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  security_group_id = aws_security_group.this.id
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "allow_outbound_postgres" {
  description       = "Allow outbound Postgres to the Digital Ocean instance"
  type              = "egress"
  from_port         = 5432
  to_port           = 5432
  protocol          = "tcp"
  security_group_id = aws_security_group.this.id
  cidr_blocks       = ["64.227.33.121/32"]
}

data "aws_subnet" "self" {
  id = var.instance.subnet_id
}

resource "aws_security_group_rule" "allow_outbound_subnet_postgres" {
  description       = "Allow outbound Postgres to the subnet"
  type              = "egress"
  from_port         = 5432
  to_port           = 5432
  protocol          = "tcp"
  security_group_id = aws_security_group.this.id
  cidr_blocks       = [data.aws_subnet.self.cidr_block]
}

resource "aws_instance" "this" {
  ami           = var.instance.ami
  instance_type = var.instance.type
  key_name      = var.key_name
  subnet_id     = var.instance.subnet_id

  user_data = templatefile("${path.module}/scripts/setup.sh", {
    tag                 = var.configuration.image_tag
    config_bucket       = var.configuration.bucket
    config_key          = var.configuration.key
    vector_tag          = var.logging.vector_tag
    extra_volume_device = var.extra_ebs_volume != null ? var.extra_ebs_volume.device_name : ""
    port_flags          = local.port_flags
  })

  vpc_security_group_ids = [aws_security_group.this.id]
  iam_instance_profile   = aws_iam_instance_profile.this.name

  metadata_options {
    # Since we'll be running containers, we need an extra hop
    http_endpoint               = "enabled"
    http_put_response_hop_limit = 2
  }

  lifecycle {
    ignore_changes = [user_data]
  }

  user_data_replace_on_change = false
}

resource "aws_eip" "this" {
  instance = aws_instance.this.id
  domain   = "vpc"
}

# Additional EBS volume (optional)
resource "aws_ebs_volume" "extra" {
  count = var.extra_ebs_volume != null ? 1 : 0

  availability_zone = aws_instance.this.availability_zone
  size              = var.extra_ebs_volume.size_gb
  type              = var.extra_ebs_volume.volume_type
  encrypted         = var.extra_ebs_volume.encrypted

  tags = {
    Name = format("%s-extra-volume", var.name)
  }
}

resource "aws_volume_attachment" "extra" {
  count = var.extra_ebs_volume != null ? 1 : 0

  device_name = var.extra_ebs_volume.device_name
  volume_id   = aws_ebs_volume.extra[0].id
  instance_id = aws_instance.this.id
}
